# deploy-streamlit

./: .gitignore  FinalProject.ipynb  FinalProject.py  classification_report.txt  deploy.ipynb  main.py  mlflow.db  model3.pkl  model5.pkl  model6.pkl  ohe_encoder.pkl  pyproject.toml  requirements.txt  scaler.pkl
mlruns/1/models/m-005892618f964605ace35a81dec960a8/artifacts/: MLmodel
mlruns/1/models/m-03974e9b8d9940fe847bcfb6d5681f96/artifacts/: MLmodel
mlruns/1/models/m-2b939a4826a04627a1e75dd630c38eee/artifacts/: MLmodel
mlruns/1/models/m-5f8d2b11180f4997b2848424d255cf64/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-803a1a2052a747abb369f294b6c021d3/artifacts/: MLmodel
mlruns/1/models/m-8c2a066d48124507a48a73e25c6ad818/artifacts/: MLmodel
mlruns/1/models/m-906c78736c5a4e0ab5a718bd80ca7aa6/artifacts/: MLmodel
mlruns/1/models/m-a47c5d8534e2465caf1b23528f1bf85a/artifacts/: MLmodel
mlruns/1/models/m-ad34cf5856f549338e4a381f296dc31c/artifacts/: MLmodel
mlruns/1/models/m-ada30ad5cf234013b5b95bdc160dd75c/artifacts/: MLmodel  conda.yaml
